Adding Java Ecosystem